@@ -69,6 +69,18 @@ name|junit
 operator|.
 name|Assert
 operator|.
+name|assertEquals
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
 name|assertNull
 import|;
 end_import
@@ -374,8 +386,7 @@ argument_list|(
 name|subEntity
 argument_list|)
 expr_stmt|;
-comment|// creating EntityInheritanceTree via EntityResolver to ensure the entities are
-comment|// indexed
+comment|// creating EntityInheritanceTree via EntityResolver to ensure the entities are indexed
 name|EntityResolver
 name|resolver
 init|=
@@ -486,6 +497,397 @@ name|entityMatchingRow
 argument_list|(
 name|row13
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testEntityMatchingRow_CAY_2693
+parameter_list|()
+block|{
+name|DataMap
+name|dataMap
+init|=
+operator|new
+name|DataMap
+argument_list|(
+literal|"map"
+argument_list|)
+decl_stmt|;
+name|DbEntity
+name|dbEntity
+init|=
+operator|new
+name|DbEntity
+argument_list|(
+literal|"a"
+argument_list|)
+decl_stmt|;
+name|dbEntity
+operator|.
+name|addAttribute
+argument_list|(
+operator|new
+name|DbAttribute
+argument_list|(
+literal|"type"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|dataMap
+operator|.
+name|addDbEntity
+argument_list|(
+name|dbEntity
+argument_list|)
+expr_stmt|;
+name|ObjEntity
+name|entityA
+init|=
+operator|new
+name|ObjEntity
+argument_list|(
+literal|"A"
+argument_list|)
+decl_stmt|;
+name|entityA
+operator|.
+name|setAbstract
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|entityA
+operator|.
+name|setDbEntityName
+argument_list|(
+name|dbEntity
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|dataMap
+operator|.
+name|addObjEntity
+argument_list|(
+name|entityA
+argument_list|)
+expr_stmt|;
+name|ObjEntity
+name|subEntityC
+init|=
+operator|new
+name|ObjEntity
+argument_list|(
+literal|"AC"
+argument_list|)
+decl_stmt|;
+comment|// name it AC so it would be sorted before B
+name|subEntityC
+operator|.
+name|setSuperEntityName
+argument_list|(
+literal|"A"
+argument_list|)
+expr_stmt|;
+name|subEntityC
+operator|.
+name|setAbstract
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|dataMap
+operator|.
+name|addObjEntity
+argument_list|(
+name|subEntityC
+argument_list|)
+expr_stmt|;
+name|ObjEntity
+name|subEntityB
+init|=
+operator|new
+name|ObjEntity
+argument_list|(
+literal|"B"
+argument_list|)
+decl_stmt|;
+name|subEntityB
+operator|.
+name|setSuperEntityName
+argument_list|(
+literal|"A"
+argument_list|)
+expr_stmt|;
+name|subEntityB
+operator|.
+name|setDeclaredQualifier
+argument_list|(
+name|ExpressionFactory
+operator|.
+name|matchDbExp
+argument_list|(
+literal|"type"
+argument_list|,
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|dataMap
+operator|.
+name|addObjEntity
+argument_list|(
+name|subEntityB
+argument_list|)
+expr_stmt|;
+name|ObjEntity
+name|subEntityD
+init|=
+operator|new
+name|ObjEntity
+argument_list|(
+literal|"D"
+argument_list|)
+decl_stmt|;
+name|subEntityD
+operator|.
+name|setSuperEntityName
+argument_list|(
+literal|"AC"
+argument_list|)
+expr_stmt|;
+name|subEntityD
+operator|.
+name|setDeclaredQualifier
+argument_list|(
+name|ExpressionFactory
+operator|.
+name|matchDbExp
+argument_list|(
+literal|"type"
+argument_list|,
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|dataMap
+operator|.
+name|addObjEntity
+argument_list|(
+name|subEntityD
+argument_list|)
+expr_stmt|;
+name|ObjEntity
+name|subEntityE
+init|=
+operator|new
+name|ObjEntity
+argument_list|(
+literal|"E"
+argument_list|)
+decl_stmt|;
+name|subEntityE
+operator|.
+name|setSuperEntityName
+argument_list|(
+literal|"AC"
+argument_list|)
+expr_stmt|;
+name|subEntityE
+operator|.
+name|setDeclaredQualifier
+argument_list|(
+name|ExpressionFactory
+operator|.
+name|matchDbExp
+argument_list|(
+literal|"type"
+argument_list|,
+literal|2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|dataMap
+operator|.
+name|addObjEntity
+argument_list|(
+name|subEntityE
+argument_list|)
+expr_stmt|;
+comment|// creating EntityInheritanceTree via EntityResolver to ensure the entities are indexed
+name|EntityResolver
+name|resolver
+init|=
+operator|new
+name|EntityResolver
+argument_list|(
+name|Collections
+operator|.
+name|singleton
+argument_list|(
+name|dataMap
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|EntityInheritanceTree
+name|treeA
+init|=
+name|resolver
+operator|.
+name|getInheritanceTree
+argument_list|(
+literal|"A"
+argument_list|)
+decl_stmt|;
+name|EntityInheritanceTree
+name|treeC
+init|=
+name|resolver
+operator|.
+name|getInheritanceTree
+argument_list|(
+literal|"AC"
+argument_list|)
+decl_stmt|;
+name|DataRow
+name|row11
+init|=
+operator|new
+name|DataRow
+argument_list|(
+literal|5
+argument_list|)
+decl_stmt|;
+name|row11
+operator|.
+name|put
+argument_list|(
+literal|"type"
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|DataRow
+name|row12
+init|=
+operator|new
+name|DataRow
+argument_list|(
+literal|5
+argument_list|)
+decl_stmt|;
+name|row12
+operator|.
+name|put
+argument_list|(
+literal|"type"
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|DataRow
+name|row13
+init|=
+operator|new
+name|DataRow
+argument_list|(
+literal|5
+argument_list|)
+decl_stmt|;
+name|row13
+operator|.
+name|put
+argument_list|(
+literal|"type"
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
+name|assertSame
+argument_list|(
+name|subEntityB
+argument_list|,
+name|treeA
+operator|.
+name|entityMatchingRow
+argument_list|(
+name|row11
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertSame
+argument_list|(
+name|subEntityD
+argument_list|,
+name|treeA
+operator|.
+name|entityMatchingRow
+argument_list|(
+name|row12
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertSame
+argument_list|(
+name|subEntityE
+argument_list|,
+name|treeA
+operator|.
+name|entityMatchingRow
+argument_list|(
+name|row13
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertSame
+argument_list|(
+name|subEntityD
+argument_list|,
+name|treeC
+operator|.
+name|entityMatchingRow
+argument_list|(
+name|row12
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertSame
+argument_list|(
+name|subEntityE
+argument_list|,
+name|treeC
+operator|.
+name|entityMatchingRow
+argument_list|(
+name|row13
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|treeA
+operator|.
+name|qualifierForEntityAndSubclasses
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|ExpressionFactory
+operator|.
+name|exp
+argument_list|(
+literal|"(db:type = 1) or (db:type = 2)"
+argument_list|)
+argument_list|,
+name|treeC
+operator|.
+name|qualifierForEntityAndSubclasses
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
